force-app/main/default/objects/CC_Email__c/CC_Email__c.object-meta.xml
<CustomObject>
    <description>One record per email the client sends in Constant Contact. Populated by the JSI-107 inbound poller (Engagement sync). Parent of CC_Email_Activity__c (per-recipient summary). JSI-109 / Jason Ott.</description>
    <label>CC Email</label>
    <nameField>
        <label>Email Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Emails</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>