force-app/main/default/objects/CC_Email__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>Marketing/appeal Campaign this email is attributed to (the "campaign out of Constant Contact"). JSI-109 / Jason Ott.</description>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>CC Emails</relationshipLabel>
    <relationshipName>CC_Emails</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>