force-app/main/default/objects/CC_Email__c/fields/CC_Campaign_Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Campaign_Activity_Id__c</fullName>
    <description>Constant Contact campaign_activity_id (UUID) for this email. Stable external key the poller upserts on. JSI-109 / Jason Ott.</description>
    <externalId>true</externalId>
    <inlineHelpText>Constant Contact's internal ID for this email send. Do not edit.</inlineHelpText>
    <label>CC Campaign Activity ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>