force-app/main/default/objects/CC_Email__c/fields/CC_List__c.field-meta.xml
<CustomField>
    <fullName>CC_List__c</fullName>
    <description>The Constant Contact list (audience) this email was sent to, represented as a CC List record-type Campaign (JSI-108). Resolved by the poller via Campaign.CC_List_Id__c. JSI-109 / Jason Ott.</description>
    <label>CC List</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>CC Emails (by List)</relationshipLabel>
    <relationshipName>CC_Emails_By_List</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>