force-app/main/default/objects/CC_Email__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <description>When Constant Contact sent this email. JSI-109 / Jason Ott.</description>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>