force-app/main/default/objects/CC_Email__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Email subject line from Constant Contact. JSI-109 / Jason Ott.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>