force-app/main/default/objects/CC_Email__c/fields/Total_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Total_Clicks__c</fullName>
    <description>Total Clicks for this email — populated by DLRS rollup of CC_Email_Activity__c. JSI-109 / Jason Ott.</description>
    <label>Total Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>