force-app/main/default/objects/CC_Email__c/fields/Total_Sends__c.field-meta.xml
<CustomField>
    <fullName>Total_Sends__c</fullName>
    <description>Total Sends for this email — populated by DLRS rollup of CC_Email_Activity__c. JSI-109 / Jason Ott.</description>
    <label>Total Sends</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>